# ha-signal-lights

./: .gitignore  .review-trigger  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  DESIGN.md  IDEAS.md  README.md  hacs.json  package.json  pyproject.toml  vitest.config.js
.github/workflows/: hacs.yml  integration.yml  js-tests.yml  lint.yml  pytest_coverage.yml  release.yml
custom_components/signal_lights/: __init__.py  binary_sensor.py  config_flow.py  const.py  coordinator.py  diagnostics.py  engine.py  manifest.json  sensor.py  services.py  services.yaml  store.py  strings.json  websocket.py
custom_components/signal_lights/frontend/: signal-lights-card.js  signal-lights-utils.js
custom_components/signal_lights/translations/: en.json
scripts/: bump-version.py  commit-version-bump.sh  extract-changelog.sh  wait-for-ha.sh
tests/: conftest.py  test_engine.py
tests/frontend/: card-behavior.test.js  card-entity-picker.test.js  card-issues.test.js  card.test.js
tests/frontend/helpers/: fake-hass.js
tests/integration/: conftest.py  docker-compose.yml  test_lifecycle.py  test_reported_issues.py  test_services_api.py
tests/integration/ha_config/: configuration.yaml
tests/integration/ha_config/.storage/: core.config_entries  signal_lights  signal_lights_signal_lights_test_entry
tests/unit/: test_cycling.py  test_release_scripts.py
